AM_CFLAGS = -DGL_GLEXT_PROTOTYPES -Wall `sdl-config --cflags`

bin_PROGRAMS = revenge

revenge_SOURCES = \
		  analyze.c \
		  analyze.h \
		  analyze_final.c \
		  analyze_final.h \
		  analyze_raw.c \
		  analyze_raw.h \
		  analyze_resolv.c \
		  analyze_resolv.h \
		  detect.c \
		  detect.h \
		  dump.c \
		  dump.h \
		  main.c \
		  main.h \
		  memory.c \
		  memory.h \
		  register.c \
		  register.h \
		  test.c \
		  test.h
