AM_CFLAGS = -DGL_GLEXT_PROTOTYPES -Wall `sdl-config --cflags`

bin_PROGRAMS = revenge

revenge_SOURCES = \
		  detect.c \
		  detect.h \
		  dump.c \
		  dump.h \
		  gl_alpha_test.c \
		  gl_alpha_test.h \
		  gl_blend.c \
		  gl_blend.h \
		  gl_clear.c \
		  gl_clear.h \
		  gl_clip_plane.c \
		  gl_clip_plane.h \
		  gl_cull_face.c \
		  gl_cull_face.h \
		  gl_depth_func.c \
		  gl_depth_func.h \
		  gl_depth_mask.c \
		  gl_depth_mask.h \
		  gl_depth_range.c \
		  gl_depth_range.h \
		  gl_front_face.c \
		  gl_front_face.h \
		  gl_line_width.c \
		  gl_line_width.h \
		  gl_null.c \
		  gl_null.h \
		  gl_point_size.c \
		  gl_point_size.h \
		  gl_primitives.c \
		  gl_primitives.h \
		  gl_render_mode.c \
		  gl_render_mode.h \
		  gl_scissor_test.c \
		  gl_scissor_test.h \
		  gl_shade_model.c \
		  gl_shade_model.h \
		  main.c \
		  main.h \
		  memory.c \
		  memory.h \
		  register.c \
		  register.h \
		  test.c \
		  test.h
