AM_CFLAGS = -DGL_GLEXT_PROTOTYPES -Wall `sdl-config --cflags`

bin_PROGRAMS = revenge

revenge_SOURCES = \
		  detect.c \
		  detect.h \
		  dump.c \
		  dump.h \
		  gl_alpha_test.c \
		  gl_alpha_test.h \
		  gl_blend.c \
		  gl_blend.h \
		  gl_clear.c \
		  gl_clear.h \
		  gl_clip_plane.c \
		  gl_clip_plane.h \
		  gl_color_logic_op.c \
		  gl_color_logic_op.h \
		  gl_cull_face.c \
		  gl_cull_face.h \
		  gl_depth_func.c \
		  gl_depth_func.h \
		  gl_depth_mask.c \
		  gl_depth_mask.h \
		  gl_depth_range.c \
		  gl_depth_range.h \
		  gl_front_face.c \
		  gl_front_face.h \
		  gl_line_smooth.c \
		  gl_line_smooth.h \
		  gl_line_smooth_hint.c \
		  gl_line_smooth_hint.h \
		  gl_line_width.c \
		  gl_line_width.h \
		  gl_null.c \
		  gl_null.h \
		  gl_point_size.c \
		  gl_point_size.h \
		  gl_primitives.c \
		  gl_primitives.h \
		  gl_render_mode.c \
		  gl_render_mode.h \
		  gl_scissor_test.c \
		  gl_scissor_test.h \
		  gl_shade_model.c \
		  gl_shade_model.h \
		  gl_texture.c \
		  gl_texture.h \
		  gl_texture_mag_filter.c \
		  gl_texture_mag_filter.h \
		  gl_texture_min_filter.c \
		  gl_texture_min_filter.h \
		  gl_texture_wrap_s.c \
		  gl_texture_wrap_s.h \
		  gl_texture_wrap_t.c \
		  gl_texture_wrap_t.h \
		  main.c \
		  main.h \
		  memory.c \
		  memory.h \
		  register.c \
		  register.h \
		  test.c \
		  test.h
